[package]
name = "dshot-pio"
version = "0.1.3"
edition = "2021"

[features]
embassy-rp = ["dep:embassy-rp"]
rp2040-hal = ["dep:rp2040-hal"]

[dependencies]
dshot-encoder = { git = "https://github.com/peterkrull/dshot-encoder" }

pio-proc = "0.2"
pio = "0.2"

rp2040-hal = { version = "0", optional = true }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", optional = true }
